force-app/main/default/objects/AA_Business__c/AA_Business__c.object-meta.xml
<CustomObject>
    <label>AA Business</label>
    <nameField>
        <label>AA Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>