force-app/main/default/objects/AA_Business__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Ej: Av. Brasil 2377 — Apto 1803 · Pocitos, Montevideo</description>
    <inlineHelpText>Ej: Av. Brasil 2377 — Apto 1803 · Pocitos, Montevideo</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>