force-app/main/default/objects/AA_Business__c/fields/Appointment_Reminder_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Reminder_Message_Template__c</fullName>
    <label>Appointment Reminder Message Template</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>