force-app/main/default/objects/AA_Business__c/fields/Book_Confirmation_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Book_Confirmation_Message_Template__c</fullName>
    <label>Book Confirmation Message Template</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>