force-app/main/default/objects/AA_Business__c/fields/Business_Phone_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Id__c</fullName>
    <label>Business Phone Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>