force-app/main/default/objects/AA_Business__c/fields/Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number__c</fullName>
    <label>Business Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>