force-app/main/default/objects/AA_Business__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <description>Example: El turno reservado podrá ser cancelado hasta 12 hrs antes de la hora agendada. No creemos en las señas, y por lo tanto, en el caso de cancelar un turno sin previo aviso se cobrará el costo de dicha sesión. Gracias, equipo SILVINA UÑAS</description>
    <inlineHelpText>Example: El turno reservado podrá ser cancelado hasta 12 hrs antes de la hora agendada. No creemos en las señas, y por lo tanto, en el caso de cancelar un turno sin previo aviso se cobrará el costo de dicha sesión. Gracias, equipo SILVINA UÑAS</inlineHelpText>
    <label>Cancellation Policy</label>
    <type>TextArea</type>
</CustomField>