force-app/main/default/objects/AA_Business__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email to send messages from the app. Typically this email is the salon&apos;s owner</description>
    <inlineHelpText>Email to send messages from the app. Typically this email is the salon&apos;s owner</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>