force-app/main/default/objects/AA_Business__c/fields/Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Manager_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AA Business</relationshipLabel>
    <relationshipName>AA_Business</relationshipName>
    <type>Lookup</type>
</CustomField>