force-app/main/default/objects/AA_Business__c/fields/Pending_Payment_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payment_Message_Template__c</fullName>
    <label>Pending Payment Message Template</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>