force-app/main/default/objects/AA_Business__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This phone number will be used for &quot;write a text message to us for more info&quot;</description>
    <inlineHelpText>This phone number will be used for &quot;write a text message to us for more info&quot;</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>